--- a/htmlcss/package.json
+++ b/htmlcss/package.json
@@ -4,7 +4,7 @@
   "description": "Liana Technology Assignment",
   "main": "index.html",
   "scripts": {
-    "dev": "browser-sync start --server --directory --files \"./*\"",
+    "dev": "browser-sync start --server --files \"**/*\"",
     "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
